--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.1.2",
     "react-router": "^6.25.1",
     "react-router-dom": "^6.25.1",
+    "react-tooltip-lite": "^1.12.0",
     "recharts": "^2.12.7",
     "rsuite": "^5.68.0"
   },
